<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.druk.lmplayground.conversation.ConversationFragment"
        android:label="@string/conversations">
        <action
            android:id="@+id/action_home_to_settings"
            app:destination="@id/nav_settings"
            app:enterAnim="@anim/slide_in_bottom"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out_bottom" />
        <action
            android:id="@+id/action_home_to_models"
            app:destination="@id/nav_models" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.druk.lmplayground.settings.SettingsFragment"
        android:label="@string/settings">
        <argument
            android:name="open_detail"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_settings_to_models"
            app:destination="@id/nav_models" />
        <action
            android:id="@+id/action_settings_to_tools"
            app:destination="@id/nav_tools" />
        <action
            android:id="@+id/action_settings_to_sound_haptic"
            app:destination="@id/nav_sound_haptic" />
        <action
            android:id="@+id/action_settings_to_advanced"
            app:destination="@id/nav_advanced" />
        <action
            android:id="@+id/action_settings_to_faq"
            app:destination="@id/nav_faq" />
        <action
            android:id="@+id/action_settings_to_privacy_policy"
            app:destination="@id/nav_privacy_policy" />
        <action
            android:id="@+id/action_settings_to_system_prompts"
            app:destination="@id/nav_system_prompts" />
        <action
            android:id="@+id/action_settings_to_language"
            app:destination="@id/nav_language" />
        <action
            android:id="@+id/action_settings_to_chidori"
            app:destination="@id/nav_chidori" />
    </fragment>

    <fragment
        android:id="@+id/nav_system_prompts"
        android:name="com.druk.lmplayground.settings.SystemPromptsFragment"
        android:label="System Prompts" />

    <fragment
        android:id="@+id/nav_models"
        android:name="com.druk.lmplayground.storage.ModelsFragment"
        android:label="@string/models" />

    <fragment
        android:id="@+id/nav_faq"
        android:name="com.druk.lmplayground.settings.FaqFragment"
        android:label="@string/faq" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.druk.lmplayground.settings.ToolsFragment"
        android:label="@string/tools" />

    <fragment
        android:id="@+id/nav_sound_haptic"
        android:name="com.druk.lmplayground.settings.SoundHapticFragment"
        android:label="@string/sound_and_haptic" />

    <fragment
        android:id="@+id/nav_advanced"
        android:name="com.druk.lmplayground.settings.AdvancedFragment"
        android:label="@string/advanced" />

    <fragment
        android:id="@+id/nav_privacy_policy"
        android:name="com.druk.lmplayground.settings.PrivacyPolicyFragment"
        android:label="@string/privacy_policy" />

    <fragment
        android:id="@+id/nav_language"
        android:name="com.druk.lmplayground.settings.LanguageFragment"
        android:label="@string/language" />

    <fragment
        android:id="@+id/nav_chidori"
        android:name="com.druk.lmplayground.coordinator.ui.ChidoriFragment"
        android:label="@string/chidori_desktop" />

</navigation>
